fix: css overflow in landing

--- a/src/views/Landings/Welcome/welcome-landing.scss
+++ b/src/views/Landings/Welcome/welcome-landing.scss
@@ -40,5 +40,6 @@
 @media (max-height: 768px) {
   .welcomeContainer {
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 }
